Added jib and doc on how to push image.