@@ -13,6 +13,21 @@ docker run -d \
    blacktop/kafka:2.6
 ```
 
+## Prerequisite
+You need JDK 15 to compile and run this project and you also need to enable preview mode since record are used.
+Right now enabling preview mode for compiling and dev mode works out of the box, not need to do anthing specific.
+
+But for some test and some more advanced build processing you might need to set this ENV variable.
+```
+export _JAVA_OPTIONS="--enable-preview"
+```
+
+## Push to Docker Hub
+Configured with JIB, will push directly to docker hub
+```
+./mvnw clean package -Dmaven.test.skip=true -Dquarkus.container-image.push=true
+```
+
 ## Running the application in dev mode and Java 15 with preview features enabled
 You can run your application in dev mode that enables live coding using:
 ```
